simpleFoobarPod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foobar-app
  labels:
    app: foobar
spec:
  containers:
  - name: foobar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foobar"
