simpleFoobarService.yaml
kind: Service
apiVersion: v1
metadata:
  name: foobar-service
spec:
  selector:
    app: foobar
  ports:
  # Default port used by the image
  - port: 8080
    targetPort: 5678
